get facebook id

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
    var loginFacebook = function(){
        FB.getLoginStatus(function(response) {
         if (response.status === 'connected') {
-            console.log('Logged in.');
+            console.log('Logged in.', response);
         }
         else {
-            FB.login();
+            FB.login(function(response){
+                console.log('Logged in.', response);
+            });
         }
         });
    }
